name:                adventure-explorer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/framp/adventure-explorer#readme
license:             BSD3
license-file:        LICENSE
author:              Federico Rampazzo
maintainer:          frampone@gmail.com
copyright:           MIT
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AdventureExplorer.Types.Location, AdventureExplorer.Types.Command, AdventureExplorer.Types.User, AdventureExplorer.Logic.Answer, AdventureExplorer.Logic.Util, AdventureExplorer.Data.Messages, AdventureExplorer.Data.FileExtensions 
  build-depends:       base >= 4.7 && < 5
                     , random
                     , haskeline
                     , directory
                     , filepath
                     , extra
                     , lens
                     , shell-conduit
                     , split
  default-language:    Haskell2010

executable adventure-explorer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventure-explorer
  default-language:    Haskell2010

test-suite adventure-explorer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventure-explorer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/framp/adventure-explorer
